--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   },
   "rules": {
     "one-var": 0,
+    "no-console": "off",
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
     "consistent-return": 0,
