--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "e-commerce-be",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon babel-node ./src/index.js",
+    "start": "node --trace-deprecation ./src/index.js",
+    "dev": "NODE_ENV=development nodemon --exec babel-node src/index.js",
     "prod": "node index.js",
+    "migration": "npx sequelize-cli db:migrate",
+    "down": "npx sequelize-cli db:migrate:undo",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
     "format": "prettier --write ."
@@ -17,14 +18,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/node": "^7.22.19",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.23.4",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.23.3",
+    "@babel/register": "^7.22.15",
+    "@babel/runtime": "^7.23.4",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-istanbul": "^6.1.1",
+    "bcrypt": "^5.1.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.1"
