--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.6.11",
+    "redis-cli": "^2.1.2",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
