--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-istanbul": "^6.1.1",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
