--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "https": "^1.0.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -47,6 +48,7 @@
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.11",
     "redis-cli": "^2.1.2",
+    "request": "^2.88.2",
     "sequelize": "^6.35.1"
   },
   "devDependencies": {
