--- a/.github/workflows/githubActions.yml
+++ b/.github/workflows/githubActions.yml
@@ -2,9 +2,9 @@ name: Github actions
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
   build:
@@ -22,10 +22,10 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
+      - name: Build
+        run: npm run build
       - name: Check code formatting
         run: npm run format
-      - name: Testing
-        run: npm run test
 
 env:
   PORT: ${{secrets.PORT}}
