--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-commerce-be",
   "version": "1.0.0",
   "description": "",
+  
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,8 +14,7 @@
     "down": "npx sequelize-cli db:migrate:undo",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
-    "format": "prettier --write .",
-    "prepare": "husky install"
+    "format": "prettier --write ."
   },
   "husky": {
     "hooks": {
