--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "down": "npx sequelize-cli db:migrate:undo",
     "lint": "eslint .",
     "lint-fix": "eslint --fix .",
-    "format": "prettier --write .",
-    "prepare": "husky install"
+    "format": "prettier --write ."
   },
   "husky": {
     "hooks": {
@@ -57,7 +56,9 @@
     "redis-cli": "^2.1.2",
     "request": "^2.88.2",
     "sequelize": "^6.35.1",
-    "stripe": "^14.21.0"
+    "stripe": "^14.21.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.54.0",
