--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel ./src/index.js -d build",
-    "start": "babel-node ./src/index.js",
+    "start": "babel-node build/src/index.js",
     "dev": "NODE_ENV=development nodemon --exec babel-node src/index.js",
     "prod": "NODE_ENV=production node --exec babel-node src/index.js",
     "migration": "npx sequelize-cli db:migrate",
@@ -53,7 +53,7 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.11",
-    "redis-cli": "^2.1.2",
+    "redis-cli": "^1.4.0",
     "request": "^2.88.2",
     "sequelize": "^6.35.1",
     "stripe": "^14.21.0",
