--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-istanbul": "^6.1.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
